syntax = "proto3";

package pb;


option go_package = "barbershop/src/pb/barber";


message DeleteBarberManagersRequest{
    string barber_id = 1;
    string manager_id = 2;
}

message DeleteBarberManagersResponse {
    string status = 1;
}